Tested all composables

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "test": "jest"
     },
     "dependencies": {
+        "uuid": "^8.3.2",
         "vue": "^3.2.21"
     },
     "devDependencies": {
