--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
         "test": "jest"
     },
     "dependencies": {
+        "@popperjs/core": "^2.10.2",
+        "bootstrap": "^5.1.3",
         "uuid": "^8.3.2",
         "vue": "^3.2.21"
     },
@@ -13,10 +15,12 @@
         "@babel/preset-env": "^7.16.0",
         "@babel/preset-typescript": "^7.16.0",
         "@types/jest": "^27.0.2",
-        "@vue/test-utils": "^1.2.2",
+        "@vue/test-utils": "^2.0.0-rc.16",
         "@vue/vue3-jest": "^27.0.0-alpha.3",
+        "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^27.3.1",
         "jest": "^27.3.1",
+        "ts-jest": "^27.0.7",
         "typescript": "^4.4.4"
     }
 }
