--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
     "name": "bootstrap-vue",
     "version": "0.0.1",
     "scripts": {
-        "test": "jest"
+        "test": "jest",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
     },
     "dependencies": {
         "@popperjs/core": "^2.10.2",
@@ -14,13 +16,19 @@
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.0",
         "@babel/preset-typescript": "^7.16.0",
+        "@storybook/addon-actions": "^6.3.12",
+        "@storybook/addon-essentials": "^6.3.12",
+        "@storybook/addon-links": "^6.3.12",
+        "@storybook/vue3": "^6.3.12",
         "@types/jest": "^27.0.2",
         "@vue/test-utils": "^2.0.0-rc.16",
         "@vue/vue3-jest": "^27.0.0-alpha.3",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^27.3.1",
+        "babel-loader": "^8.2.3",
         "jest": "^27.3.1",
         "ts-jest": "^27.0.7",
-        "typescript": "^4.4.4"
+        "typescript": "^4.4.4",
+        "vue-loader": "^16.8.3"
     }
 }
