--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@storybook/addon-actions": "^6.3.12",
         "@storybook/addon-essentials": "^6.3.12",
         "@storybook/addon-links": "^6.3.12",
+        "@storybook/preset-scss": "^1.0.3",
         "@storybook/vue3": "^6.3.12",
         "@types/jest": "^27.0.2",
         "@vue/test-utils": "^2.0.0-rc.16",
@@ -28,6 +29,8 @@
         "babel-jest": "^27.3.1",
         "babel-loader": "^8.2.3",
         "jest": "^27.3.1",
+        "sass": "^1.43.4",
+        "sass-loader": "10.1.1",
         "ts-jest": "^27.0.7",
         "typescript": "^4.4.4",
         "vue-loader": "^16.8.3"
