--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "main": "src/index.ts",
     "license": "MIT",
     "scripts": {
-        "test": "jest",
+        "build-storybook": "build-storybook",
+        "lint": "eslint --no-fix",
         "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "test": "jest"
     },
     "dependencies": {
         "@popperjs/core": "^2.10.2",
@@ -28,6 +29,8 @@
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^27.3.1",
         "babel-loader": "^8.2.3",
+        "eslint": "^8.2.0",
+        "eslint-plugin-vue": "^8.0.3",
         "jest": "^27.3.1",
         "ts-jest": "^27.0.7",
         "typescript": "^4.4.4",
