--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "scripts": {
         "build-storybook": "build-storybook",
-        "lint": "eslint --no-fix",
+        "lint": "eslint src/**/*.vue",
         "storybook": "start-storybook -p 6006",
         "test": "jest"
     },
@@ -24,6 +24,7 @@
         "@storybook/addon-links": "^6.3.12",
         "@storybook/vue3": "^6.3.12",
         "@types/jest": "^27.0.2",
+        "@typescript-eslint/parser": "^5.3.1",
         "@vue/test-utils": "^2.0.0-rc.16",
         "@vue/vue3-jest": "^27.0.0-alpha.3",
         "babel-core": "^7.0.0-bridge.0",
@@ -34,6 +35,7 @@
         "jest": "^27.3.1",
         "ts-jest": "^27.0.7",
         "typescript": "^4.4.4",
+        "vue-eslint-parser": "^8.0.1",
         "vue-loader": "^16.8.3"
     }
 }
