--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
         "@storybook/addon-links": "^6.3.12",
         "@storybook/vue3": "^6.3.12",
         "@types/jest": "^27.0.2",
+        "@typescript-eslint/eslint-plugin": "^5.3.1",
         "@typescript-eslint/parser": "^5.3.1",
+        "@vue/eslint-config-typescript": "^9.0.1",
         "@vue/test-utils": "^2.0.0-rc.16",
         "@vue/vue3-jest": "^27.0.0-alpha.3",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^27.3.1",
         "babel-loader": "^8.2.3",
         "eslint": "^8.2.0",
+        "eslint-plugin-unused-imports": "^2.0.0",
         "eslint-plugin-vue": "^8.0.3",
         "jest": "^27.3.1",
         "ts-jest": "^27.0.7",
