--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "scripts": {
         "build-storybook": "build-storybook",
-        "lint": "eslint src/**/*.vue",
+        "lint": "eslint src/**/*.{vue,ts}",
         "storybook": "start-storybook -p 6006",
         "test": "jest"
     },
