--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
     "name": "@owowagency/bootstrap-vue",
     "version": "0.0.1",
-    "main": "src/index.ts",
+    "main": "dist/index.js",
     "scripts": {
         "test": "jest",
         "storybook": "start-storybook -p 6006",
-        "build-storybook": "build-storybook"
+        "build-storybook": "build-storybook",
+        "build": "rollup -c"
     },
     "dependencies": {
         "@popperjs/core": "^2.10.2",
@@ -17,17 +18,30 @@
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.0",
         "@babel/preset-typescript": "^7.16.0",
+        "@rollup/plugin-commonjs": "^21.0.1",
+        "@rollup/plugin-eslint": "^8.0.1",
         "@storybook/addon-actions": "^6.3.12",
         "@storybook/addon-essentials": "^6.3.12",
         "@storybook/addon-links": "^6.3.12",
         "@storybook/vue3": "^6.3.12",
         "@types/jest": "^27.0.2",
+        "@types/uuid": "^8.3.1",
+        "@typescript-eslint/eslint-plugin": "^5.3.1",
+        "@typescript-eslint/parser": "^5.3.1",
+        "@vue/cli-plugin-eslint": "^4.5.15",
+        "@vue/eslint-config-typescript": "^9.0.1",
         "@vue/test-utils": "^2.0.0-rc.16",
         "@vue/vue3-jest": "^27.0.0-alpha.3",
         "babel-core": "^7.0.0-bridge.0",
         "babel-jest": "^27.3.1",
         "babel-loader": "^8.2.3",
+        "eslint": "^8.2.0",
+        "eslint-plugin-vue": "^8.0.3",
         "jest": "^27.3.1",
+        "rollup": "^2.59.0",
+        "rollup-plugin-clear": "^2.0.7",
+        "rollup-plugin-typescript2": "^0.30.0",
+        "rollup-plugin-vue": "^6.0.0",
         "ts-jest": "^27.0.7",
         "typescript": "^4.4.4",
         "vue-loader": "^16.8.3"
