--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
     "name": "@owowagency/bootstrap-vue",
     "version": "0.0.1",
-    "main": "src/index.ts",
     "license": "MIT",
+    "main": "dist/bootstrap-vue.cjs",
+    "module": "dist/bootstrap-vue.mjs",
+    "browser": "dist/bootstrap-vue.js",
+    "unpkg": "dist/bootstrap-vue.js",
     "scripts": {
+        "build": "yarn rollup -c rollup.config.js",
         "build-storybook": "build-storybook",
         "lint": "eslint src/**/*.{vue,ts}",
         "storybook": "start-storybook -p 6006",
         "test": "jest"
-    },
-    "dependencies": {
-        "@popperjs/core": "^2.10.2",
-        "bootstrap": "^5.1.3",
-        "uuid": "^8.3.2",
-        "vue": "^3.2.21"
     },
     "devDependencies": {
         "@babel/core": "^7.16.0",
@@ -36,9 +34,19 @@
         "eslint-plugin-unused-imports": "^2.0.0",
         "eslint-plugin-vue": "^8.0.3",
         "jest": "^27.3.1",
+        "rollup": "^2.60.0",
+        "rollup-plugin-typescript": "^1.0.1",
+        "rollup-plugin-typescript2": "^0.30.0",
+        "rollup-plugin-vue": "^6.0.0",
         "ts-jest": "^27.0.7",
         "typescript": "^4.4.4",
         "vue-eslint-parser": "^8.0.1",
         "vue-loader": "^16.8.3"
+    },
+    "peerDependencies": {
+        "@popperjs/core": "^2.10.2",
+        "bootstrap": "^5.1.3",
+        "uuid": "^8.3.2",
+        "vue": "^3.2.21"
     }
 }
