--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
         "vue-eslint-parser": "^8.0.1",
         "vue-loader": "^16.8.3"
     },
-    "peerDependencies": {
+    "dependencies": {
         "@popperjs/core": "^2.10.2",
         "bootstrap": "^5.1.3",
         "uuid": "^8.3.2",
