--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@owowagency/bootstrap-vue",
-    "version": "0.0.1",
+    "version": "0.0.3",
     "license": "MIT",
     "main": "dist/bootstrap-vue.cjs",
     "module": "dist/bootstrap-vue.mjs",
@@ -46,10 +46,10 @@
         "vue-eslint-parser": "^8.0.1",
         "vue-loader": "^16.8.3"
     },
-    "peerDependencies": {
+    "dependencies": {
         "@popperjs/core": "^2.10.2",
         "bootstrap": "^5.1.3",
         "uuid": "^8.3.2",
-        "vue": "^3.2.21"
+        "vue": "^3.2.20"
     }
 }
