Global type declaration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
     "compilerOptions": {
-        "esModuleInterop": true
-    },
+        "baseUrl": "./",
+        "esModuleInterop": true,
+        "paths": {
+            "@/*": ["./src/*"]
+        }
+    }
 }
