--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "sass": "^1.43.4",
         "sass-loader": "10.1.1",
         "ts-jest": "^27.0.7",
+        "tsconfig-paths-webpack-plugin": "^3.5.2",
         "typescript": "^4.4.4",
         "vue-eslint-parser": "^8.0.1",
         "vue-loader": "^16.8.3"
