--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "@owowagency/bootstrap-vue",
-    "version": "0.0.12",
+    "version": "0.0.13",
     "license": "MIT",
+    "homepage": "https://owowagency.github.io/bootstrap-vue",
     "main": "dist/bootstrap-vue.cjs",
     "module": "dist/bootstrap-vue.mjs",
     "browser": "dist/bootstrap-vue.js",
@@ -14,7 +15,9 @@
     "scripts": {
         "build": "yarn rollup -c rollup.config.js",
         "build-storybook": "build-storybook",
+        "deploy-storybook": "gh-pages -d storybook-static",
         "lint": "eslint src/**/*.{vue,ts}",
+        "predeploy": "build-storybook",
         "storybook": "start-storybook -p 6006",
         "test": "jest"
     },
@@ -39,6 +42,7 @@
         "eslint": "^8.2.0",
         "eslint-plugin-unused-imports": "^2.0.0",
         "eslint-plugin-vue": "^8.0.3",
+        "gh-pages": "^3.2.3",
         "jest": "^27.3.1",
         "rollup": "^2.60.0",
         "rollup-plugin-typescript": "^1.0.1",
@@ -57,5 +61,8 @@
         "bootstrap": "^5.1.3",
         "uuid": "^8.3.2",
         "vue": "^3.2.20"
+    },
+    "storybook": {
+        "url": "https://owowagency.github.io/bootstrap-vue"
     }
 }
