--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         node-version: 16.13.0
         cache: yarn
         
-    - name: Yarn
+    - name: Install dependencies
       run: yarn
 
     - name: Lint
