Build during release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,9 @@ jobs:
         
     - name: Install dependencies
       run: yarn
+        
+    - name: Build
+      run: yarn build
 
     - name: Publish
       run: yarn publish
