--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@owowagency/bootstrap-vue",
-    "version": "0.0.16",
+    "version": "0.0.17-a",
     "license": "MIT",
     "homepage": "https://owowagency.github.io/bootstrap-vue",
     "main": "dist/bootstrap-vue.cjs",
