--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "build": "yarn rollup -c rollup.config.js",
         "build-storybook": "build-storybook",
         "deploy-storybook": "gh-pages -d storybook-static",
-        "lint": "eslint src/**/*.{vue,ts}",
+        "lint": "eslint src --ext .ts,.vue",
         "predeploy": "build-storybook",
         "storybook": "start-storybook -p 6006",
         "test": "jest"
