--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
     "version": "0.0.20",
     "license": "MIT",
     "homepage": "https://owowagency.github.io/bootstrap-vue",
-    "main": "bootstrap-vue.cjs",
-    "module": "bootstrap-vue.mjs",
-    "browser": "bootstrap-vue.js",
-    "unpkg": "bootstrap-vue.js",
+    "main": "bootstrap-vue.mjs",
     "publishConfig": {
         "@owowagency:registry": "https://npm.pkg.github.com"
     },
