--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "jest": "^27.3.1",
         "rollup": "^2.60.0",
         "rollup-plugin-copy": "^3.4.0",
+        "rollup-plugin-delete": "^2.0.0",
         "rollup-plugin-typescript2": "^0.31.1",
         "rollup-plugin-vue": "^6.0.0",
         "sass": "^1.43.4",
