--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "version": "0.22.1",
     "license": "MIT",
     "homepage": "https://owowagency.github.io/bootstrap-vue",
-    "main": "bootstrap-vue.mjs",
+    "entry": "bootstrap-vue",
+    "main": "bootstrap-vue.js",
+    "module": "bootstrap-vue.mjs",
     "publishConfig": {
         "@owowagency:registry": "https://npm.pkg.github.com"
     },
