--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,24 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v2
+    - uses: actions/setup-node@v3
       with:
         cache: yarn
         node-version: 16.13.0
         registry-url: https://npm.pkg.github.com/
         
-    - name: Install dependencies
-      run: yarn
+    - run: yarn
         
-    - name: Build
-      run: yarn build
-
-    - name: Release
-      env:
+    - run: yarn build
+    
+    - env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: npx semantic-release
 
+    - run: yarn build-storybook
+    
+    - run: yarn deploy-storybook
