--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,9 +7,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
 
-    - uses: actions/setup-node@v2
+    - uses: actions/setup-node@v3
       with:
         node-version: 16.13.0
         cache: yarn
@@ -17,8 +17,12 @@ jobs:
     - name: Install dependencies
       run: yarn
 
-    - name: Lint
-      run: yarn lint --no-fix
+    # - name: Lint
+    #   run: yarn lint --no-fix
 
-    - name: Test
-      run: yarn test
+    # - name: Test
+    #   run: yarn test
+
+    - run: yarn build-storybook
+
+    - run: yarn deploy-storybook -u 'OWOW Agency <info@owow.io>'
