--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,4 @@ jobs:
 
     - run: yarn build-storybook
 
-    - run: yarn deploy-storybook -u 'OWOW Agency <info@owow.io>'
+    - run: yarn deploy-storybook -u 'github-actions-bot <support+actions@github.com>'
