--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,7 @@ jobs:
 
     - run: yarn build-storybook
 
-    - run: yarn deploy-storybook -u "github-actions-bot <support+actions@github.com>"
+    - uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./storybook-static
