--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,5 +29,8 @@ jobs:
       run: npx semantic-release
 
     - run: yarn build-storybook
-    
-    - run: yarn deploy-storybook
+
+    - uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./storybook-static
