--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,15 +17,8 @@ jobs:
     - name: Install dependencies
       run: yarn
 
-    # - name: Lint
-    #   run: yarn lint --no-fix
+    - name: Lint
+      run: yarn lint --no-fix
 
-    # - name: Test
-    #   run: yarn test
-
-    - run: yarn build-storybook
-
-    - uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./storybook-static
+    - name: Test
+      run: yarn test
