fix(package): Set Storybook package versions

--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
         "@semantic-release/github": "^8.0.2",
         "@semantic-release/npm": "^8.0.3",
         "@semantic-release/release-notes-generator": "^10.0.3",
-        "@storybook/addon-actions": "^6.3.12",
-        "@storybook/addon-essentials": "^6.3.12",
-        "@storybook/addon-links": "^6.3.12",
+        "@storybook/addon-actions": "6.4.9",
+        "@storybook/addon-essentials": "6.4.9",
+        "@storybook/addon-links": "6.4.9",
         "@storybook/preset-scss": "^1.0.3",
-        "@storybook/vue3": "^6.3.12",
+        "@storybook/vue3": "6.4.9",
         "@types/bootstrap": "^5.1.8",
         "@types/jest": "^27.0.2",
         "@types/uuid": "^8.3.3",
