--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,12 +16,12 @@ jobs:
       with:
         cache: yarn
         node-version: 16.13.0
-        registry-url: https://npm.pkg.github.com/
-        
+        registry-url: https://registry.npmjs.org
+
     - run: yarn
-        
+
     - run: yarn build
-    
+
     - env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
