--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,6 @@ jobs:
       with:
         cache: yarn
         node-version: 16.13.0
-        registry-url: https://registry.npmjs.org
 
     - run: yarn
 
@@ -24,8 +23,16 @@ jobs:
 
     - env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        NPM_CONFIG_REGISTRY: https://npm.pkg.github.com/
+      run: npx semantic-release
+
+    - env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        NPM_CONFIG_REGISTRY: https://registry.npmjs.org
       run: npx semantic-release
 
     - run: yarn build-storybook
