--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@semantic-release/npm": "^8.0.3",
         "@semantic-release/release-notes-generator": "^10.0.3",
         "@storybook/addon-actions": "6.4.9",
+        "@storybook/addon-docs": "^6.5.0-rc.1",
         "@storybook/addon-essentials": "6.4.9",
         "@storybook/addon-links": "6.4.9",
         "@storybook/preset-scss": "^1.0.3",
