--- a/.releaserc.json
+++ b/.releaserc.json
@@ -4,7 +4,7 @@
         "@semantic-release/release-notes-generator",
         "@semantic-release/github",
         ["@semantic-release/npm", {"pkgRoot": "dist"}],
-        ["@semantic-release/git", {"assets": ["package.json", "./**/*.md"]}]
+        ["@semantic-release/git", {"assets": ["package.json", "./src/**/*.md"]}]
     ],
     "tagFormat": "${version}",
     "branches": ["master"]
