chore: use vite for package bundling and allow treeshaking

--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
     "version": "1.15.0",
     "license": "MIT",
     "homepage": "https://owowagency.github.io/bootstrap-vue",
+    "type": "module",
     "entry": "bootstrap-vue",
-    "main": "bootstrap-vue.js",
-    "module": "bootstrap-vue.mjs",
+    "main": "bootstrap-vue.cjs",
+    "module": "bootstrap-vue.js",
+    "types": "index.d.ts",
+    "exports": {
+        ".": {
+            "types": "./index.d.ts",
+            "import": "./bootstrap-vue.js",
+            "require": "./bootstrap-vue.cjs"
+        }
+    },
     "engines": {},
     "scripts": {
-        "build": "yarn rollup -c rollup.config.js",
+        "build": "vite build",
         "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
         "deploy-storybook": "gh-pages -d storybook-static",
         "generate-docs": "vue-docgen",
@@ -16,13 +25,9 @@
         "postversion": "cp package.json ..",
         "predeploy": "build-storybook",
         "storybook": "start-storybook -p 6006",
-        "test": "jest"
+        "test": "vitest run"
     },
     "devDependencies": {
-        "@babel/core": "^7.16.0",
-        "@babel/preset-env": "^7.16.0",
-        "@babel/preset-typescript": "^7.16.0",
-        "@rollup/plugin-json": "^4.1.0",
         "@semantic-release/commit-analyzer": "^9.0.2",
         "@semantic-release/git": "^10.0.1",
         "@semantic-release/github": "^8.0.2",
@@ -39,28 +44,27 @@
         "@types/uuid": "^8.3.3",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.3.1",
+        "@vitejs/plugin-vue": "^4.5.1",
         "@vue/eslint-config-typescript": "^9.0.1",
-        "@vue/test-utils": "^2.0.0-rc.16",
+        "@vue/test-utils": "^2.4.3",
+        "@vue/tsconfig": "^0.4.0",
         "@vue/vue3-jest": "^27.0.0-alpha.3",
-        "babel-core": "^7.0.0-bridge.0",
-        "babel-jest": "^27.3.1",
-        "babel-loader": "^8.2.3",
         "eslint": "^8.2.0",
         "eslint-plugin-unused-imports": "^2.0.0",
         "eslint-plugin-vue": "^8.0.3",
         "gh-pages": "^3.2.3",
         "jest": "^27.3.1",
-        "rollup": "^2.60.0",
-        "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-delete": "^2.0.0",
-        "rollup-plugin-typescript2": "^0.31.1",
-        "rollup-plugin-vue": "^6.0.0",
         "sass": "^1.43.4",
         "sass-loader": "10.1.1",
         "ts-jest": "^27.0.7",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "typescript": "^4.4.4",
-        "vue": "^3.2.20",
+        "vite": "^5.0.4",
+        "vite-plugin-dts": "^3.6.4",
+        "vite-plugin-static-copy": "^1.0.0",
+        "vite-plugin-vue-docgen": "^0.3.4",
+        "vitest": "^0.34.6",
+        "vue": "^3.2.26",
         "vue-docgen-cli": "^4.45.0",
         "vue-eslint-parser": "^8.0.1",
         "vue-loader": "^16.8.3"
