--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "compilerOptions": {
-        "baseUrl": "./",
         "esModuleInterop": true,
         "declaration": true,
         "skipLibCheck": true,
@@ -8,19 +7,14 @@
         "module": "esnext",
         "jsx": "preserve",
         "moduleResolution": "node",
-        "importHelpers": true,
-        "paths": {
-            "@/*": ["./src/*"]
-        }
+        "importHelpers": true
     },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.vue",
-    ],
-    "exclude": [
-        "src/**/*.stories.ts",
-        "src/**/*.test.ts",
-        "node_modules",
-        "tests",
+    "references": [
+        {
+          "path": "./tsconfig.lib.json"
+        },
+        {
+          "path": "./tsconfig.test.json"
+        }
     ]
 }
