--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "build": "vite build",
         "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
         "deploy-storybook": "gh-pages -d storybook-static",
-        "generate-docs": "vue-docgen",
+        "generate-docs": "vue-docgen -c docgen.config.cjs",
         "lint": "eslint src --ext .ts,.vue",
         "postversion": "cp package.json ..",
         "predeploy": "build-storybook",
@@ -40,7 +40,6 @@
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/vue3": "6.4.9",
         "@types/bootstrap": "^5.1.8",
-        "@types/jest": "^27.0.2",
         "@types/uuid": "^8.3.3",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.3.1",
@@ -48,12 +47,10 @@
         "@vue/eslint-config-typescript": "^9.0.1",
         "@vue/test-utils": "^2.4.3",
         "@vue/tsconfig": "^0.4.0",
-        "@vue/vue3-jest": "^27.0.0-alpha.3",
         "eslint": "^8.2.0",
         "eslint-plugin-unused-imports": "^2.0.0",
         "eslint-plugin-vue": "^8.0.3",
         "gh-pages": "^3.2.3",
-        "jest": "^27.3.1",
         "sass": "^1.43.4",
         "sass-loader": "10.1.1",
         "ts-jest": "^27.0.7",
@@ -62,10 +59,9 @@
         "vite": "^5.0.4",
         "vite-plugin-dts": "^3.6.4",
         "vite-plugin-static-copy": "^1.0.0",
-        "vite-plugin-vue-docgen": "^0.3.4",
         "vitest": "^0.34.6",
         "vue": "^3.2.26",
-        "vue-docgen-cli": "^4.45.0",
+        "vue-docgen-cli": "^4.67.0",
         "vue-eslint-parser": "^8.0.1",
         "vue-loader": "^16.8.3"
     },
