chore: cleanup and add src to dist folder for sourcemap

--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "license": "MIT",
     "homepage": "https://owowagency.github.io/bootstrap-vue",
     "type": "module",
-    "main": "./dist/bootstrap-vue.cjs",
-    "module": "./dist/bootstrap-vue.js",
-    "types": "./dist/index.d.ts",
+    "main": "./lib/bootstrap-vue.cjs",
+    "module": "./lib/bootstrap-vue.js",
+    "types": "./lib/index.d.ts",
     "exports": {
         ".": {
-            "types": "./dist/index.d.ts",
-            "import": "./dist/bootstrap-vue.js",
-            "require": "./dist/bootstrap-vue.cjs"
+            "types": "./lib/index.d.ts",
+            "import": "./lib/bootstrap-vue.js",
+            "require": "./lib/bootstrap-vue.cjs"
         }
     },
     "engines": {},
@@ -39,6 +39,7 @@
         "@storybook/preset-scss": "^1.0.3",
         "@storybook/vue3": "6.4.9",
         "@types/bootstrap": "^5.1.8",
+        "@types/jsdom": "^21.1.6",
         "@types/uuid": "^8.3.3",
         "@typescript-eslint/eslint-plugin": "^5.4.0",
         "@typescript-eslint/parser": "^5.3.1",
@@ -50,13 +51,14 @@
         "eslint-plugin-unused-imports": "^2.0.0",
         "eslint-plugin-vue": "^8.0.3",
         "gh-pages": "^3.2.3",
+        "jsdom": "^23.0.1",
         "sass": "^1.43.4",
         "sass-loader": "10.1.1",
-        "ts-jest": "^27.0.7",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "typescript": "^4.4.4",
         "vite": "^5.0.4",
         "vite-plugin-dts": "^3.6.4",
+        "vite-plugin-static-copy": "^1.0.0",
         "vitest": "^0.34.6",
         "vue": "^3.2.26",
         "vue-docgen-cli": "^4.67.0",
