chore: upgrade storybook

--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "engines": {},
     "scripts": {
         "build": "vite build",
-        "build-storybook": "NODE_OPTIONS=--openssl-legacy-provider build-storybook",
-        "deploy-storybook": "gh-pages -d storybook-static",
-        "generate-docs": "vue-docgen -c docgen.config.cjs",
+        "test": "vitest run",
         "lint": "eslint src --ext .ts,.vue",
+        "generate-docs": "vue-docgen -c docgen.config.cjs",
         "postversion": "cp package.json ..",
-        "predeploy": "build-storybook",
-        "storybook": "start-storybook -p 6006",
-        "test": "vitest run"
+        "predeploy": "storybook build",
+        "storybook": "storybook dev -p 6006",
+        "storybook:build": "NODE_OPTIONS=--openssl-legacy-provider storybook build",
+        "storybook:deploy": "gh-pages -d storybook-static"
     },
     "devDependencies": {
         "@semantic-release/commit-analyzer": "^9.0.2",
@@ -32,12 +32,14 @@
         "@semantic-release/github": "^8.0.2",
         "@semantic-release/npm": "^8.0.3",
         "@semantic-release/release-notes-generator": "^10.0.3",
-        "@storybook/addon-actions": "6.4.9",
-        "@storybook/addon-docs": "^6.5.0-rc.1",
-        "@storybook/addon-essentials": "6.4.9",
-        "@storybook/addon-links": "6.4.9",
+        "@storybook/addon-docs": "7.6.3",
+        "@storybook/addon-essentials": "7.6.3",
+        "@storybook/addon-interactions": "7.6.3",
+        "@storybook/addon-links": "7.6.3",
+        "@storybook/blocks": "7.6.3",
         "@storybook/preset-scss": "^1.0.3",
-        "@storybook/vue3": "6.4.9",
+        "@storybook/vue3": "7.6.3",
+        "@storybook/vue3-vite": "7.6.3",
         "@types/bootstrap": "^5.1.8",
         "@types/jsdom": "^21.1.6",
         "@types/uuid": "^8.3.3",
@@ -52,9 +54,11 @@
         "eslint-plugin-vue": "^8.0.3",
         "gh-pages": "^3.2.3",
         "jsdom": "^23.0.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "sass": "^1.43.4",
         "sass-loader": "10.1.1",
-        "tsconfig-paths-webpack-plugin": "^3.5.2",
+        "storybook": "7.6.3",
         "typescript": "^4.4.4",
         "vite": "^5.0.4",
         "vite-plugin-dts": "^3.6.4",
