--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,7 @@ jobs:
         NPM_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: yarn publish dist
 
-    - run: yarn build-storybook
+    - run: yarn storybook:build
 
     - uses: peaceiris/actions-gh-pages@v3
       with:
