chore: upgrade node engine deps

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
             "require": "./lib/bootstrap-vue.cjs"
         }
     },
-    "engines": {},
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "scripts": {
         "build": "vite build",
         "test": "vitest run",
